--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         </div>
         <div class="contact-map">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3607.911641650315!2d51.48631081501473!3d25.286922983859397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjXCsDE3JzEyLjkiTiA1McKwMjknMTAuNyJF!5e0!3m2!1sen!2sqa!4v1645437283412!5m2!1sen!2sqa"
+            src="https://maps.app.goo.gl/iNgktSJuhpAkv9PE8"
             width="100%"
             height="450"
             style="border: 0"
