--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <a href="https://www.facebook.com/share/1WBPYUzb6U/" target="_blank"
             ><i class="fab fa-facebook"></i
           ></a>
-          <a href="https://g.co/kgs/9Gba8J5" target="_blank"
+          <a href="https://maps.app.goo.gl/o6fw4uGYfLSDnBUm9" target="_blank"
             ><i class="fas fa-map-marker-alt"></i
           ></a>
         </div>
@@ -197,7 +197,7 @@
         </div>
         <div class="contact-map">
           <iframe
-            src="https://g.co/kgs/9Gba8J5"
+            src="https://maps.app.goo.gl/o6fw4uGYfLSDnBUm9"
             width="100%"
             height="450"
             style="border: 0"
