--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       </div>
     </section>
 
-    <section class="section3" id="contact">
+<!--     <section class="section3" id="contact">
       <h2>Contact Us</h2>
       <div class="contact-content">
         <div class="contact-info">
@@ -207,7 +207,7 @@
           </iframe>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <footer>
       <div class="footer-content">
