--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <script src="script.js"></script>
   </head>
   <body>
     <header>
@@ -209,7 +210,7 @@
       </div>
     </section> -->
 
-    <footer>
+    <footer id="contact">
       <div class="footer-content">
         <div class="footer-section">
           <h3>Contact Us</h3>
@@ -245,6 +246,5 @@
         <p>&copy; 2024 Al-Badr Academy. All rights reserved.</p>
       </div>
     </footer>
-    <script src="script.js"></script>
   </body>
 </html>
