--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
         <p>&copy; 2024 Al-Badr Academy. All rights reserved.</p>
       </div>
     </footer>
+    <script src="main.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
